# dummy_stock_screener

./: .env  .gitignore  Dockerfile_backend  Dockerfile_frontend  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: .gitignore  Dockerfile_api  pyproject.toml
backend/src/: api.py  generator.py
backend/src/misc/: config.py  db.py  schemas.py
frontend/src/: index.html  index.js
