[tool.poetry]
name = "dummy_stock_screener"
version = "0.1.0"
description = "dss - dummy stock screener"
authors = ["yar-jul <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
sqlalchemy = "^1.4.42"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.4"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
